情報ウインドウに項目の追加日を追加。 ドキュメント保存前にbookmarksのkidnapを行うように変更。

--- a/Bookmarks/Base.lproj/ATBookmarkInspectorWindow.xib
+++ b/Bookmarks/Base.lproj/ATBookmarkInspectorWindow.xib
@@ -200,7 +200,7 @@ DQ
                         <constraints>
                             <constraint firstAttribute="width" constant="169" id="260"/>
                         </constraints>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="243">
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="243">
                             <dateFormatter key="formatter" dateStyle="short" timeStyle="short" id="248"/>
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
