--- a/Bookmarks/Base.lproj/ATDocumentPreferencesWindow.xib
+++ b/Bookmarks/Base.lproj/ATDocumentPreferencesWindow.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1080" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
     </dependencies>
     <objects>
@@ -49,7 +50,11 @@
                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     </textFieldCell>
                                     <connections>
-                                        <binding destination="iOW-2S-bRx" name="value" keyPath="selection.preferences.windowAlphaValue" id="ezb-0x-1Bj"/>
+                                        <binding destination="iOW-2S-bRx" name="value" keyPath="selection.preferences.windowAlphaValue" id="7g9-3t-aVI">
+                                            <dictionary key="options">
+                                                <bool key="NSContinuouslyUpdatesValue" value="YES"/>
+                                            </dictionary>
+                                        </binding>
                                     </connections>
                                 </textField>
                             </subviews>
